--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: ./nginx
     restart: unless-stopped
     ports:
-      - "8080:80"  # <--- ВОТ ИЗМЕНЕНИЕ
+      - "8080:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
@@ -25,6 +25,13 @@ services:
     build: ./backend
     restart: unless-stopped
     env_file: .env
+    # --- НАЧАЛО ИЗМЕНЕНИЙ ---
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    environment:
+      - HTTP_PROXY=socks5://host.docker.internal:9999
+      - HTTPS_PROXY=socks5://host.docker.internal:9999
+    # --- КОНЕЦ ИЗМЕНЕНИЙ ---
     volumes:
       - ./backend:/app
       - ./config.json:/app_config/config.json
@@ -55,6 +62,13 @@ services:
     build: ./worker
     restart: unless-stopped
     env_file: .env
+    # --- НАЧАЛО ИЗМЕНЕНИЙ ---
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    environment:
+      - HTTP_PROXY=socks5://host.docker.internal:9999
+      - HTTPS_PROXY=socks5://host.docker.internal:9999
+    # --- КОНЕЦ ИЗМЕНЕНИЙ ---
     volumes:
       - ./worker:/app
       - ./backend/kb_service:/app/kb_service
