--- a/proxychains.conf
+++ b/proxychains.conf
@@ -5,4 +5,5 @@ tcp_read_time_out 15000
 tcp_connect_time_out 8000
 
 [ProxyList]
-socks5  host.docker.internal 9999
+# Заменили host.docker.internal на IP-адрес шлюза Docker
+socks5  172.17.0.1 9999
