--- a/proxychains.conf
+++ b/proxychains.conf
@@ -4,12 +4,11 @@ remote_dns_subnet 224
 tcp_read_time_out 15000
 tcp_connect_time_out 8000
 
-# Исключаем внутренние сети Docker из проксирования
+# Exclude local networks from proxying
 localnet 127.0.0.0/8
-localnet 172.16.0.0/12  # Это стандартный диапазон для Docker-сетей
+localnet 172.16.0.0/12
 localnet 192.168.0.0/16
 localnet 10.0.0.0/8
 
 [ProxyList]
-# IP-адрес шлюза Docker
 socks5  172.17.0.1 9999
