--- a/proxychains.conf
+++ b/proxychains.conf
@@ -1,5 +1,5 @@
 strict_chain
-proxy_dns
+#proxy_dns
 remote_dns_subnet 224
 tcp_read_time_out 15000
 tcp_connect_time_out 8000
@@ -11,4 +11,4 @@ localnet 192.168.0.0/16
 localnet 10.0.0.0/8
 
 [ProxyList]
-socks5  172.17.0.1 9999
+socks5  host.docker.internal 9999
