--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker-compose.yml
 version: '3.8'
 
 services:
@@ -28,7 +27,7 @@ services:
     env_file: .env
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    command: proxychains4 -q uvicorn main:app --host 0.0.0.0 --port 8000
+    command: bash -c "./wait-for-it.sh db:5432 -- uvicorn main:app --host 0.0.0.0 --port 8000"
     volumes:
       - ./backend:/app
       - ./config.json:/app_config/config.json
@@ -62,7 +61,7 @@ services:
     env_file: .env
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    command: proxychains4 -q python main.py
+    command: python main.py
     volumes:
       - ./worker:/app
       - ./backend/kb_service:/app/kb_service
