--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     env_file: .env
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    command: bash -c "./wait-for-it.sh db:5432 -- uvicorn main:app --host 0.0.0.0 --port 8000"
+    command: sh -c './wait-for-it.sh db:5432 -- uvicorn main:app --host 0.0.0.0 --port 8000'
     volumes:
       - ./backend:/app
       - ./config.json:/app_config/config.json
