--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,16 +25,19 @@ services:
     build: ./backend
     restart: unless-stopped
     env_file: .env
+    # --- НАЧАЛО ИЗМЕНЕНИЙ ---
+    environment:
+      # Заставляем все HTTP/HTTPS запросы идти через наш прокси
+      HTTPS_PROXY: "socks5h://host.docker.internal:9090"
+      HTTP_PROXY: "socks5h://host.docker.internal:9090"
+    # --- КОНЕЦ ИЗМЕНЕНИЙ ---
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
       - ./backend:/app
       - ./config.json:/app_config/config.json
       - ./chat_histories:/app/chat_histories
-      - ./proxychains.conf:/etc/proxychains.conf:ro
-    depends_on:
-      - redis
-      - db
+      # - ./proxychains.conf:/etc/proxychains.conf:ro # Эта строка больше не нужна
 
   db:
     container_name: engineering-hub-db
@@ -58,6 +61,12 @@ services:
     build: ./worker
     restart: unless-stopped
     env_file: .env
+    # --- НАЧАЛО ИЗМЕНЕНИЙ ---
+    environment:
+      # То же самое для воркера
+      HTTPS_PROXY: "socks5h://host.docker.internal:9090"
+      HTTP_PROXY: "socks5h://host.docker.internal:9090"
+    # --- КОНЕЦ ИЗМЕНЕНИЙ ---
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
@@ -65,10 +74,7 @@ services:
       - ./backend/kb_service:/app/kb_service
       - ./config.json:/app_config/config.json
       - ./chat_histories:/app/chat_histories
-      - ./proxychains.conf:/etc/proxychains.conf:ro
-    depends_on:
-      - redis
-      - db
+      # - ./proxychains.conf:/etc/proxychains.conf:ro # И эта строка больше не нужна
 
 volumes:
   postgres_data:
