--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,3 @@
-httpx[socks]
 fastapi
 uvicorn[standard]
 pydantic
@@ -21,4 +20,5 @@ google-cloud-aiplatform
 google-ai-generativelanguage
 python-jose[cryptography]
 passlib[bcrypt]
+bcrypt
 python-multipart
