--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,16 +1,8 @@
-# Это ЕДИНСТВЕННЫЙ Nginx, который смотрит в интернет.
-# Он выполняет всю работу: принимает запросы с /hub/ и правильно их распределяет.
-
 server {
     listen 80;
-    # Если будете настраивать SSL, здесь будет listen 443 ssl;
-    server_name ваш_домен_или_IP; # Например, 51.158.76.113
+    server_name ваш_домен_или_IP;
 
-    # Правило №1: Маршрутизация API
-    # Все запросы, начинающиеся с /hub/api/, отправляем на бэкенд
     location /hub/api/ {
-        # Директива rewrite "отрезает" /hub из пути перед отправкой на бэкенд.
-        # /hub/api/users -> /api/users
         rewrite ^/hub/(.*)$ /$1 break;
 
         proxy_pass http://backend:8000;
@@ -22,22 +14,16 @@ server {
         proxy_connect_timeout 75s;
     }
 
-    # Правило №2: Маршрутизация Фронтенда
-    # Все запросы, начинающиеся с /hub/, но не /hub/api/, отправляем на фронтенд
     location /hub/ {
-        # Директива rewrite "отрезает" /hub из пути.
-        # /hub/some/page -> /some/page
         rewrite ^/hub/(.*)$ /$1 break;
 
-        proxy_pass http://frontend:80; # Nginx в контейнере frontend слушает порт 80
+        proxy_pass http://frontend:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Правило №3: Корень сайта
-    # Если кто-то зайдет на http://<IP>/, перенаправляем его на /hub/
     location = / {
         return 301 /hub/;
     }
